# ASTEC

./: README  README.md  index.ipynb  license.txt
ASTEC/: ASTEC.py  FUSION.py  (+5 more)
ASTEC/CommunFunctions/cpp/: CMakeLists.txt
ASTEC/CommunFunctions/cpp/src/: CMakeLists.txt
ASTEC/CommunFunctions/cpp/src/baladin/: CMakeLists.txt  baladin.c  baladin.h  balimage.c  balimage.h  behavior-00000.h  behavior-01000.h  behavior-01100.h  behavior-10000.h  behavior-11000.h  behavior-11010.h  behavior-11100.h  behavior-11110.h  behavior.c  behavior.h  comparaison.h  estimateur.c  estimateur.h  initialisation.c  initialisation.h  matrix.c  matrix.h  mesure.c  mesure.h  misc.c  misc.h  py_image.c  py_image.h  vecteur.c  vecteur.h
ASTEC/CommunFunctions/cpp/src/blockmatching/: CMakeLists.txt  GNUmakefile  applyTrsf.c  bal-applyTrsf.c  bal-applyTrsf.h  bal-applyTrsfToPoint.c  bal-applyTrsfToPoints.c  bal-behavior.c  bal-behavior.h  bal-block-tools.c  bal-block-tools.h  bal-block.c  bal-blockmatching-param-tools.c  bal-blockmatching-param-tools.h  bal-blockmatching-param.h  bal-blockmatching.c  bal-blockmatching.h  bal-blockmatching_fct.c  bal-blockmatching_fct.h  bal-composeTrsf.c  bal-composeTrsf.h  bal-createRandomTrsf.c  bal-createRandomTrsf.h  bal-createVectorTrsf.c  bal-createVectorTrsf.h  bal-cropImage.c  bal-cropImage.h  bal-estimator.c  bal-estimator.h  bal-field-tools.c  bal-field-tools.h  bal-field.c  bal-image-tools.c  bal-image.c  bal-image.h  bal-invTrsf.c  bal-invTrsf.h  bal-lineartrsf-tools.c  bal-lineartrsf.c  bal-matrix.c  (+18 more)
ASTEC/CommunFunctions/cpp/src/diameter/: CMakeLists.txt  alloc.h  apprx-diam.h  exact-diam.h  peled-like.c  peled-like.h  pick.h  print.h  rand.h  read.h  test-diameter.c  test-pick.c  test-rand.c  util.h
ASTEC/CommunFunctions/cpp/src/libbarbier/: CMakeLists.txt  computeInfos.c
ASTEC/CommunFunctions/cpp/src/libbasic/: CMakeLists.txt  basictransform.h  chamfercoefficients-build.c  chamfercoefficients-common.c  chamfercoefficients-results.c  chamfercoefficients-weights.c  chamfercoefficients.c  chamfercoefficients.h  chamferdistance.c  chamferdistance.h  chunks.c  chunks.h  connexe.c  connexe.h  convert.c  convert.h  convolution.c  convolution.h  cspline.c  cspline.h  drawShapes.c  extract.h  file-tools.h  histogram.c  iopnm.c  issimple3D.h  linearFiltering-common.c  linearFiltering-common.h  linearFiltering-contours.c  linearFiltering-contours.h  linearFiltering-gradient.c  linearFiltering-gradient.h  linearFiltering-hessian.c  linearFiltering-hessian.h  linearFiltering-laplacian.c  linearFiltering-laplacian.h  linearFiltering.c  linearFiltering.h  local-operation.c  local-operation.h  (+41 more)
ASTEC/CommunFunctions/cpp/src/libbiolibtools/: CMakeLists.txt  bal-biolib-tools.c  bal-biolib-tools.h  bal-biolib-tracker.cpp  bal-biolib-tracker.h  blApplyTrsfToDetectionResults.c  blBuildTracks.c  blCopyTrackResults.c  blCropDetectionResults.c  blCropTrackResults.c  blDiffTrackResults.c  blDriftQualityMeasure.c  blMaskDetectionResults.c  blMaskTrackResults.c  blPlotDetectionResults.c  blPlotTrackResults.c  blSelectTrackResults.c  blStatTrackResults.c
ASTEC/CommunFunctions/cpp/src/libconfocal/: CMakeLists.txt  best-translation.c  confocal.cmap  conv-image.c  endpoints.c  extractCurves.c  info-histo.c  seuil-ersf.c  upperView.c
ASTEC/CommunFunctions/cpp/src/libdavid/: ccparameters.c  linederiv.h  recline.h
ASTEC/CommunFunctions/cpp/src/libelf/: CMakeLists.txt  generHisto.c  generVecteursMatlab.c  parametersOfCc.c  reconnect.c  removeBarbules.c  removeCcOnBorder.c  skiz.c  test-gener-ellipse2D.c  test-gener-ellipse3D.c  test-maxdiameter.c  test-maxima.c  test-param-ellipse2D.c  test-param-ellipse3D.c  vt_elfbarbules.c  vt_elfbarbules.h  vt_elfparam.c  vt_elfparam.h  vt_elfrelabel.c  vt_elfrelabel.h  vt_elfskiz.c  vt_elfskiz.h
ASTEC/CommunFunctions/cpp/src/libfilters/: .inslog2  .ix496058.13316  .ix883801.29745  .machine.map  D_graphe.cpp  G_classif.cpp  G_classif.h  build-tube3D.c  drawCenters.c  extraction_arbre.cpp  ge_line.c  linkCurve.c  reechSlices.c  reechSlices2.c  road.c  test-contours-3D.c  test-contours.c  test-hessian.c  test-hessien3D.c  test-mask3D.c  test-tube3D.c  tube3D.h  tube3Dutil.h  vessel.c  vt_contours.c  vt_geline2D.c  vt_geline3D.c  vt_geline3D.h  vt_isocontours.c  vt_tube2D.c  vt_tube2D.h  vt_tube2Dmatlab.c  vt_tube3D.c  vt_tube3D.h  vt_tube3Delf.c  vt_tubeutils.c
ASTEC/CommunFunctions/cpp/src/libgems/: CMakeLists.txt  ge_anev.c  ge_contours.c  ge_demo.c  ge_line.c  ge_median.c  ge_recfilters.c  ge_seuil.c  ge_seuil1.c  ge_seuil2.c  ge_seuil3.c  ge_seuil3_3mip.c  ge_seuil_test_1.c  ge_seuil_test_2.c  ge_smooth.c  ge_testeval.c  ge_testseuil.c  ge_thin.c  vt_gaussienne.c  vt_gaussienne.h  vt_geambdd.c  vt_geambdd.h  vt_geambdd2.c  vt_geambdd2.h  vt_geamdist.c  vt_geamdist.h  vt_geline.c  vt_geline.h  vt_geline2D.h  vt_geline3D.c  vt_gelrec3D.c  vt_gelrec3D.h  vt_gemask.c  vt_gemask.h  vt_gemedian.c  vt_gemedian.h  vt_gerecfilters.c  vt_gerecfilters.h  vt_gerecons.c  vt_geremove.c  (+7 more)
ASTEC/CommunFunctions/cpp/src/libhisto/: .inslog2  CMakeLists.txt  DREY_Robust_affine_equalization.c  README  Robust_affine_equalization.c  evalBleaching.c  fitGaussOnHisto.c  fitOnHisto.c  fitOnHistoLung.c  imagesHisto.c  macro.h  powell.c  powell.h  slicesCorrect.c  slicesHisto-2.c  slicesHisto.c  test-erf.c  test-parzen-1-gauss.c  test-parzen-2-gauss.c  test-parzen-2.c  test-parzen-3-gauss.c  test-parzen-4-gauss.c  test-parzen.c  vt_histoLung.c  vt_histoLung.h  vt_sliceHisto.c  vt_sliceHisto.h
ASTEC/CommunFunctions/cpp/src/libio/: CMakeLists.txt  ImageIO.c  ImageIO.h  analyze.c  bmp.c  gif.c  gis.c  gis.h  inr.c  iris.c  pnm.c  typedefs.h
ASTEC/CommunFunctions/cpp/src/libipmc/: CMakeLists.txt  compute-speed.c  fit-distribution-tools.c  fit-distribution-tools.h  fit-distribution.c  remove-spurious.c  speed-from-area.c  tracking-colocalization.c  tracking-pits.c  tracking-profiles.c  tracking-tools.c  tracking-tools.h
ASTEC/CommunFunctions/cpp/src/libjacobien/: CMakeLists.txt  getAllValue.c  getValue.c  jacobien.c  test-jacobien.c  vt_jacobien.c  vt_jacobien.h
(+395 files in other folders)
